Rydder litt opp og fikser et par todos